--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   email_validator: ^2.1.16
   shared_preferences: ^2.1.0
   intl: ^0.18.0
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
